--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.1.RELEASE</version>
+        <version>2.6.4</version>
     </parent>
     <groupId>com.oopsmails.k8s.configmgmt</groupId>
     <artifactId>demo</artifactId>
@@ -42,29 +42,29 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            <plugin>
-                <groupId>com.google.cloud.tools</groupId>
-                <artifactId>jib-maven-plugin</artifactId>
-                <version>0.10.1</version>
-                <configuration>
-                    <to>
-                        <image>configmgmt:${project.version}</image>
-                    </to>
-                    <container>
-                        <mainClass>com.oopsmails.configmgmt.demo.DemoApplication</mainClass>
-                        <useCurrentTimestamp>true</useCurrentTimestamp>
-                    </container>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>docker-daemon</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>dockerBuild</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>com.google.cloud.tools</groupId>-->
+<!--                <artifactId>jib-maven-plugin</artifactId>-->
+<!--                <version>0.10.1</version>-->
+<!--                <configuration>-->
+<!--                    <to>-->
+<!--                        <image>configmgmt:${project.version}</image>-->
+<!--                    </to>-->
+<!--                    <container>-->
+<!--                        <mainClass>com.oopsmails.configmgmt.demo.DemoApplication</mainClass>-->
+<!--                        <useCurrentTimestamp>true</useCurrentTimestamp>-->
+<!--                    </container>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>docker-daemon</id>-->
+<!--                        <phase>compile</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>dockerBuild</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 </project>
